# maap_client

./: .gitignore  EXAMPLES.md  README.md  config.toml  pyproject.toml
built_catalogs/: EarthCAREAuxiliary_MAAP_collection.json  EarthCAREL0L1Products_MAAP_collection.json  EarthCAREL1InstChecked_MAAP_collection.json  EarthCAREL1Validated_MAAP_collection.json  EarthCAREL2InstChecked_MAAP_collection.json  EarthCAREL2Products_MAAP_collection.json  EarthCAREL2Validated_MAAP_collection.json  EarthCAREOrbitData_MAAP_collection.json  EarthCAREXMETL1DProducts10_MAAP_collection.json  JAXAL2InstChecked_MAAP_collection.json  JAXAL2Products_MAAP_collection.json  JAXAL2Validated_MAAP_collection.json
catalogs/: EarthCAREAuxiliary_MAAP_queryables.json  EarthCAREL0L1Products_MAAP_queryables.json  EarthCAREL1InstChecked_MAAP_queryables.json  EarthCAREL1Validated_MAAP_queryables.json  EarthCAREL2InstChecked_MAAP_queryables.json  EarthCAREL2Products_MAAP_queryables.json  EarthCAREL2Validated_MAAP_queryables.json  EarthCAREOrbitData_MAAP_queryables.json  EarthCAREXMETL1DProducts10_MAAP_queryables.json  JAXAL2InstChecked_MAAP_queryables.json  JAXAL2Products_MAAP_queryables.json  JAXAL2Validated_MAAP_queryables.json
docs/: AUTH.md  CATALOGS.md  CATALOG_BUILD.md  CLI.md  CLI_COMMANDS.md  CONFIG.md  CONSTANTS.md  DOWNLOAD.md  EXCEPTIONS.md  MAAP_CLIENT.md  PATHS.md  SEARCH.md  SEARCH_USE_CATALOG.md  STATE.md  UTILS.md
maap_client/: __init__.py  __main__.py  auth.py  catalog.py  catalog_build.py  catalog_query.py  cli.py  cli_commands.py  cli_helpers.py  client.py  config.py  constants.py  (+8 more)
